RESOLVED FIXED300582
SpeculationRules: navigation timing waitForResponse tests have failing expectations
https://bugs.webkit.org/show_bug.cgi?id=300582
Summary SpeculationRules: navigation timing waitForResponse tests have failing expect...
Yoav Weiss
Reported 2025-10-12 07:23:39 PDT
The following tests have failing expectations: LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/navigation-timing-requestStart-responseStart.https_include=waitingForResponse-expected.txt LayoutTests/imported/w3c/web-platform-tests/speculation-rules/prefetch/navigation-timing-requestStart-responseStart.https_include=waitingForRedirect-expected.txt We should fix them.
Attachments
Yoav Weiss
Comment 1 2025-10-12 07:30:29 PDT
EWS
Comment 2 2025-10-13 22:46:46 PDT
Committed 301456@main (fed984d0feb9): <https://commits.webkit.org/301456@main> Reviewed commits have been landed. Closing PR #52199 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-13 22:47:11 PDT
Note You need to log in before you can comment on or make changes to this bug.